--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -415,6 +415,8 @@ The following changes to existing APIs or features add new behavior.
 
 • 'errorfile' (|-q|) accepts `-` as an alias for stdin.
 
+• `--startuptime` now reports the startup times per process individually.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
