feat(lsp): allow silent if there is no hover result

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -195,6 +195,8 @@ The following new APIs and features were added.
     the original LSP `Location` or `LocationLink`.
   • Added support for connecting to servers using named pipes (Windows) or
     unix domain sockets (Unix) via |vim.lsp.rpc.domain_socket_connect()|.
+  • |vim.lsp.buf.hover()| now allow `silent` the notification if there is no
+    hover result.
 
 • Treesitter
   • Bundled parsers and queries (highlight, folds) for Markdown, Python, and
