--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -194,7 +194,7 @@ The following new APIs and features were added.
   • |vim.lsp.util.locations_to_items()| sets the `user_data` of each item to
     the original LSP `Location` or `LocationLink`.
   • Added support for connecting to servers using named pipes (Windows) or
-    unix domain sockets (Unix) via |vim.lsp.rpc.domain_socket_connect()|.
+    unix domain sockets (Unix) via |vim.lsp.rpc.connect_pipe()|.
 
 • Treesitter
   • Bundled parsers and queries (highlight, folds) for Markdown, Python, and
