fix(highlight): update default statusline groups for better usability
Problem: Current values of `StatusLine` and `StatusLineNC` are currently
  designed to be visually distinctive while being not intrusive.
  However, the compromise was more shifted towards "not intrusive".
  After the feedback, statusline highlight groups should be designed to:
  - Make current window clearly noticeable. Meaning `StatusLine` and
    `StatusLineNC` should obviously differ.
  - Make non-current windows clearly separable. Meaning `StatusLineNC`
    and `Normal`/`NormalNC` should obviously differ.

Solution:
  - Update `StatusLineNC` to have more visible background.
  - Update `StatusLine` to be inverted variant of `StatusLineNC`.
  - Update `WinBar` and `WinBarNC` to not link to `StatusLine` and
    `StatusLineNC` because it makes two goals harder to achieve.
  - Update `TabLine` to link to `StatusLineNC` instead of `StatusLine`
    to not be very visually intrusive.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -99,8 +99,8 @@ The following changes may require adaptations in user config or plugins.
   a meaningfully different way and might need an update:
   • |hl-FloatBorder| is linked to |hl-NormalFloat| instead of |hl-WinSeparator|.
   • |hl-NormalFloat| is not linked to |hl-Pmenu|.
-  • |hl-WinBar| is linked to |hl-StatusLine|.
-  • |hl-WinBarNC| is linked to |hl-StatusLineNC| instead of |hl-WinBar|.
+  • |hl-WinBar| has different background.
+  • |hl-WinBarNC| is similar to |hl-WinBar| but not bold.
   • |hl-WinSeparator| is linked to |hl-Normal| instead of |hl-VertSplit|.
 
   This also might result into some color schemes looking differently due to
