--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -289,6 +289,8 @@ The following new APIs and features were added.
 
 • Terminal buffers respond to OSC background and foreground requests. |default-autocmds|
 
+• Added the |SessionWritePre| autocommand event.
+
 ==============================================================================
 CHANGED FEATURES                                                 *news-changed*
 
