--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -415,8 +415,7 @@ The following changes to existing APIs or features add new behavior.
 
 • 'errorfile' (|-q|) accepts `-` as an alias for stdin.
 
-• `--startuptime` now reports the startup times per process individually.
-
+• |--startuptime| reports the startup times for both processes (TUI + server) as separate sections.
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
