feat(ex_cmds): support ranged :lua
:{range}lua executes the specified lines in the current buffer as
Lua code, regardless of its extension or 'filetype'.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -337,6 +337,9 @@ The following changes to existing APIs or features add new behavior.
 • |:source| without arguments treats a buffer with its 'filetype' set to "lua"
   as Lua code regardless of its extension.
 
+• |:lua| with a |[range]| executes that range in the current buffer as Lua code
+  regardless of its extension.
+
 • |:checkhealth| buffer now implements |folding|. The initial folding status is
   defined by the 'foldenable' option.
 
