--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -224,6 +224,8 @@ The following new APIs and features were added.
   • |vim.treesitter.query.edit()| allows live editing of treesitter
     queries.
   • Improved error messages for query parsing.
+  • `:InspectTree` (|vim.treesitter.inspect_tree()|) shows node ranges in
+    0-based indexing instead of 1-based indexing.
 
 • |vim.ui.open()| opens URIs using the system default handler (macOS `open`,
   Windows `explorer`, Linux `xdg-open`, etc.)
