feat(api): `nvim_get_chan_info` pass 0 for current channel
Getting current channel info was kind of annoying via RPC. Two
functions needed to be called

1. `nvim_get_api_info` which returns `[channel_id, meta_data]`
  - this results in `channel_id = api.nvim_get_api_info()[0]`
  - Here the meta_data is send but never used
2. Finally call `nvim_get_chan_info(channel_id)`

This commit reduces the need for `nvim_get_api_info` as passing 0
returns current channel info

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -405,6 +405,8 @@ The following changes to existing APIs or features add new behavior.
 • Attempting to set an invalid keycode option (e.g. `set t_foo=123`) no longer
   gives an error.
 
+• Passing 0 to |nvim_get_chan_info()| gets info about the current channel.
+
 • |:checkhealth| buffer can now be opened in a split window using modifiers like
   |:vertical|, |:horizontal| and |:botright|.
 
