feat(treesitter): add optional modeline arguments to query.set
Problem:

- 'vim.treesitter.query.set' only supports overriding queries defined in
  runtime files. It does not provide a way to extend existing queries.
  There is not an easy way to customize query behavior based on dynamic
  configuration (e.g., as a plugin).

Solution:

- Add optional arguments to 'vim.treesitter.query.set' that correspond to
  to the treesitter query modelines supported in runtime query files.
- Add support for query overrides from `vim.treesitter.query.set` to be
  applied for an entire language or for individual buffers by providing
  and optional `bufnr` argument to both `vim.treesitter.query.set` and
  `vim.treesitter.query.get`.

Implementation notes:

- A given query can be extended by multiple callers. For example,
  multiple plugins can provide extensions to the same query. As such,
  parsing of query overrides and extensions has been moved to
  `vim.treesitter.query.get`.
- Queries can be extended (and also now overridden) for an entire
  language or for individual buffers. Buffers with buffer-only overrides
  or extensions will also include any global language extensions.
- Tree-sitter fold, highlighter, and languagetree modules have been
  updated to support buffer-only query overrides and extensions.
- Memoize cache invalidation was necessary to implement this feature
  with consistent behavior (i.e., seeing query changes applied via
  `vim.treesitter.query.set` immediately). The
  `vim.treesitter.query.get` memoize hash is now cleared when calling
  `vim.treesitter.query.set`. When setting buffer-only queries the
  corresponding function call is removed from the memoize cache. When
  setting global lang queries the entire memoize cache is cleared. This
  scheme was picked under the assumption that global lang queries will
  typically be set before getting queries, whereas buffer-only queries
  may be set and changed throughout a session.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -226,6 +226,8 @@ The following new APIs and features were added.
   • `:InspectTree` (|vim.treesitter.inspect_tree()|) shows node ranges in
     0-based indexing instead of 1-based indexing.
   • `:InspectTree` (|vim.treesitter.inspect_tree()|) shows root nodes
+  • |vim.treesitter.query.set()| can now inherit and/or extend runtime file
+    queries in addition to overriding.
 
 • |vim.ui.open()| opens URIs using the system default handler (macOS `open`,
   Windows `explorer`, Linux `xdg-open`, etc.)
