fixup: update news.txt

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -422,6 +422,10 @@ The following changes to existing APIs or features add new behavior.
 
 • |--startuptime| reports the startup times for both processes (TUI + server) as separate sections.
 
+* |vim.lsp.start()| now maps |K| to use |vim.lsp.buf.hover()| if the server
+  supports it, unless |'keywordprg'| was customized before calling
+  |vim.lsp.start()|.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
