--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -216,7 +216,7 @@ The following new APIs and features were added.
     Bash.
   • |vim.treesitter.query.omnifunc()| for treesitter query files (set by
     default).
-  • |Query:iter_matches2()| now has the ability to set the maximum start depth
+  • |Query:iter_matches()| now has the ability to set the maximum start depth
     for matches.
   • `@injection.language` now has smarter resolution and will fall back to
     language aliases (e.g., filetype or custom shorthands) registered via
@@ -424,6 +424,21 @@ The following changes to existing APIs or features add new behavior.
 
 • |nvim_buf_call()| and |nvim_win_call()| now preserves any return value (NB: not multiple return values)
 
+• Treesitter
+  • |Query:iter_matches()|, |vim.treesitter.query.add_predicate()|, and
+    |vim.treesitter.query.add_directive()| accept a new "correct" option which
+    opts-in to correct matching behavior. When "correct" is set, the match
+    table returned by each iteration of |Query:iter_matches()| (or that is
+    passed to the handler function for predicates/directives) maps capture IDs
+    to lists of nodes rather than to a single node. The latter behavior is
+    incorrect and buggy, but is kept as the default for backward
+    compatibility. In a future release, the correct behavior will become the
+    default and the "correct" option will be removed.
+  • |vim.treesitter.query.add_predicate()| and
+    |vim.treesitter.query.add_directive()| now accept an options table rather
+    than a boolean "force" argument. To force a predicate or directive to
+    override an existing predicate or directive, use `{ force = true }`.
+
 ==============================================================================
 REMOVED FEATURES                                                 *news-removed*
 
@@ -478,7 +493,6 @@ release.
 • `vim.loop` has been renamed to |vim.uv|.
 
 • vim.treesitter functions:
-  - |Query:iter_matches()|		Use |Query:iter_matches2()| instead.
   - |LanguageTree:for_each_child()|	Use |LanguageTree:children()| (non-recursive) instead.
 
 • The "term_background" UI option |ui-ext-options| is deprecated and no longer
