docs: document breaking change for nvim_create_autocmd callback
https://github.com/neovim/neovim/pull/27428 changed the semantics of
callbacks passed to nvim_create_autocmd such that any truthy value will
delete the autocommand (rather than just the literal boolean value
`true`). Update the documentation accordingly and add an entry to
`news.txt`.

The behavior is now consistent between nvim_create_autocmd and
nvim_buf_attach.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -122,6 +122,9 @@ The following changes may require adaptations in user config or plugins.
 
 • |shm-q| now fully hides macro recording message instead of only shortening it.
 
+• Returning any truthy value from a callback passed to |nvim_create_autocmd()|
+  (rather than just `true`) will delete the autocommand.
+
 ==============================================================================
 BREAKING CHANGES IN HEAD                                    *news-breaking-dev*
 
