--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -134,6 +134,9 @@ The following changes may require adaptations in user config or plugins.
   If necessary, the respective capability can be
   removed when calling |vim.lsp.protocol.make_client_capabilities()|.
 
+• |:TOhtml| has been rewritten in Lua to support Neovim-specific decorations,
+  and many options have been removed.
+
 ==============================================================================
 BREAKING CHANGES IN HEAD                                    *news-breaking-dev*
 
