--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -253,6 +253,7 @@ The following new APIs and features were added.
   • The `#set!` directive can set the "url" property of a node to have the
     node emit a hyperlink. Hyperlinks are UI specific: in the TUI, the OSC 8
     control sequence is used.
+  • |:Man| now supports `hide` modifier to open page in the current window
 
 • |vim.ui.open()| opens URIs using the system default handler (macOS `open`,
   Windows `explorer`, Linux `xdg-open`, etc.)
