--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -40,7 +40,7 @@ The following changes may require adaptations in user config or plugins.
     set selection=exclusive
     set selectmode=mouse,key
     set mousemodel=popup
-    setn keymodel=startsel,stopsel
+    set keymodel=startsel,stopsel
 <
 • When switching windows, |CursorMoved| autocommands trigger when Nvim is back
   in the main loop rather than immediately. This is more compatible with Vim.
